--- a/client/repository-java-client/pom.xml
+++ b/client/repository-java-client/pom.xml
@@ -36,11 +36,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.6</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-jxpath</groupId>
 			<artifactId>commons-jxpath</artifactId>
 			<version>1.3</version>
@@ -70,6 +65,12 @@
 			<artifactId>wiremock</artifactId>
 			<version>2.5.0</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-lang3</artifactId>
+					<groupId>org.apache.commons</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
