--- a/repository/repository-web/pom.xml
+++ b/repository/repository-web/pom.xml
@@ -18,7 +18,7 @@
 			<artifactId>repository-server</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.eclipse.vorto</groupId>
 			<artifactId>importer-ipso</artifactId>
@@ -56,14 +56,14 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
-			<version>1.13.13.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+			<version>1.13.13.RELEASE</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
 		<dependency>
-		    <groupId>org.apache.tika</groupId>
-		    <artifactId>tika-core</artifactId>
-		    <version>1.17</version>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>1.17</version>
 		</dependency>
 
 		<dependency>
@@ -92,6 +92,17 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-lang3</artifactId>
+					<groupId>org.apache.commons</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
 		</dependency>
 
 		<dependency>
@@ -120,9 +131,9 @@
 			<version>0.2.3</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.webjars.bower</groupId>
-		    <artifactId>ng-prettyjson</artifactId>
-		    <version>0.2.0</version>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>ng-prettyjson</artifactId>
+			<version>0.2.0</version>
 		</dependency>
 	</dependencies>
 
@@ -163,10 +174,10 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<profiles>
 		<profile>
-		<id>exclude-h2</id>
+			<id>exclude-h2</id>
 			<build>
 				<plugins>
 					<plugin>
